--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
     <head>
-        <title>CS416 Narrative Visualization Project</title>
+        <title>Car Fuel Efficiency in 2017</title>
     </head>
+    <body>
+        <h1>Car Fuel Efficiency in 2017</h1>
+        <h2>Mohini Purandare CS416 Narrative Visualization Project 07/28/2024</h2>
+
+        <p>This narrative visualization provides details on car fuel efficiency for various car makers in 2017. Various factors that influence a car's fuel efficiency are examined. The aim to provide insight into what kind of cars provide the best mileage.</p>
+
+        <h5>Click the button below to get started.</h5>
+
+        <button>Get Started</button>
+    </body>
 </html>
