Add 3 scenes navigation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Car Fuel Efficiency in 2017</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Car Fuel Efficiency in 2017</h1>
@@ -10,6 +11,6 @@
 
         <h5>Click the button below to get started.</h5>
 
-        <button>Get Started</button>
+        <button onclick="window.location.href='scene1.html'">Get Started</button>
     </body>
 </html>
