--- a/scene3.html
+++ b/scene3.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Scene 3/h1>
+        <h1>Scene 3</h1>
         <p>Scene 3 Content</p>
 
         <button onclick="window.location.href='scene2.html'">Previous</button>
