--- a/scene2.html
+++ b/scene2.html
@@ -3,6 +3,7 @@
     <head>
         <title>Scene 2</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
     <body>
         <h1>Scene 2</h1>
