--- a/scene3.html
+++ b/scene3.html
@@ -3,6 +3,7 @@
     <head>
         <title>Scene 3</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://d3js.org/d3.v7.min.js"></script>
     </head>
     <body>
         <h1>Scene 3</h1>
