--- a/scene1.html
+++ b/scene1.html
@@ -28,19 +28,19 @@
             .attr("transform", `translate(${margin.left},${margin.top})`);
 
         // Parse the Data
-        d3.csv("https://flunky.github.io/cars2017.csv", function(csvData){
-            var csvData1 = csvData.filter(function(d){return d.Fuel === "Electricity"});
-            return {Make: csvData1.Make, AverageHighwayMPG: csvData1.AverageHighwayMPG, AverageCityMPG: csvData1.AverageCityMPG}
-        }).then( function(data) {
+        d3.csv("https://flunky.github.io/cars2017.csv").then( function(data) {
         
         //Get only electric car data
-        //var electricData = data.filter(function(d){return d.Fuel === "Electricity"});
+        var electricData = data.filter(function(d){return d.Fuel === "Electricity"});
+        console.log(electricData);
 
-        // List of subgroups = header of the csv files = soil condition here
-        const subgroups = data.columns.slice(1)
+        // List of subgroups = header of the csv files = Mileage
+        const subgroups = electricData.columns.slice(2)
+        console.log(subgroups);
 
-        // List of groups = species here = value of the first column called group -> I show them on the X axis
-        const groups = data.map(d => (d.Make))
+        // List of groups = species here = value of the first column called Make -> I show them on the X axis
+        const groups = electricData.map(d => (d.Make))
+        console.log(groups);
 
         // Add X axis
         const x = d3.scaleBand()
@@ -66,7 +66,7 @@
         //stack the data? --> stack per subgroup
         const stackedData = d3.stack()
             .keys(subgroups)
-            (data)
+            (electricData)
 
         // Show the bars
         svg.append("g")
@@ -79,7 +79,7 @@
             // enter a second time = loop subgroup per subgroup to add all rectangles
             .data(d => d)
             .join("rect")
-                .attr("x", d => x(d.data.group))
+                .attr("x", d => x(d.electricData.Make))
                 .attr("y", d => y(d[1]))
                 .attr("height", d => y(d[0]) - y(d[1]))
                 .attr("width",x.bandwidth())
