Comment out stacked bar chart data

--- a/scene1.html
+++ b/scene1.html
@@ -58,15 +58,15 @@
         svg.append("g")
             .call(d3.axisLeft(y));
 
-        // color palette = one color per subgroup
-        const color = d3.scaleOrdinal()
-            .domain(subgroups)
-            .range(['#e41a1c','#377eb8'])
+        // // color palette = one color per subgroup
+        // const color = d3.scaleOrdinal()
+        //     .domain(subgroups)
+        //     .range(['#e41a1c','#377eb8'])
 
-        //stack the data? --> stack per subgroup
-        const stackedData = d3.stack()
-            .keys(subgroups)
-            (electricData)
+        // //stack the data? --> stack per subgroup
+        // const stackedData = d3.stack()
+        //     .keys(subgroups)
+        //     (electricData)
 
         //console.log(stackedData);
         // Show the bars
