--- a/scene1.html
+++ b/scene1.html
@@ -17,52 +17,50 @@
     <script>
 
         // set the dimensions and margins of the graph
-        const margin = {top: 10, right: 30, bottom: 20, left: 50}, width = 650 - margin.left - margin.right, height = 400 - margin.top - margin.bottom;
+        const margin = { top: 10, right: 30, bottom: 20, left: 50 }, width = 650 - margin.left - margin.right, height = 400 - margin.top - margin.bottom;
 
         // append the svg object to the body of the page
         const svg = d3.select("#my_dataviz")
-        .append("svg")
+            .append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
-        .append("g")
+            .append("g")
             .attr("transform", `translate(${margin.left},${margin.top})`);
 
         // Parse the Data
-        d3.csv("https://flunky.github.io/cars2017.csv").then( function(data) {
-        
-        //Get only electric car data in descending order
-        var electricData = data.filter(function(d){return d.Fuel === "Electricity"});
-        electricData.sort(function(a,b){return d3.descending(a.AverageHighwayMPG, b.AverageHighwayMPG);
+        d3.csv("https://flunky.github.io/cars2017.csv").then(function (data) {
 
-        })
-        console.log(electricData);
+            //Get only electric car data in descending order
+            var electricData = data.filter(function (d) { return d.Fuel === "Electricity" });
+            electricData.sort(function (a, b) { return d3.descending(a.AverageHighwayMPG, b.AverageHighwayMPG); });
+            console.log(electricData);
 
-        // Add X axis
-        const x = d3.scaleBand()
-            .domain(electricData.map(function(d){return d.Make}))
-            .range([0, width])
-            .padding([0.2])
-        svg.append("g")
-            .attr("transform", `translate(0, ${height})`)
-            .call(d3.axisBottom(x).tickSizeOuter(0));
+            // Add X axis
+            const x = d3.scaleBand()
+                .domain(electricData.map(function (d) { return d.Make }))
+                .range([0, width])
+                .padding([0.2])
+            svg.append("g")
+                .attr("transform", `translate(0, ${height})`)
+                .call(d3.axisBottom(x).tickSizeOuter(0));
 
-        // Add Y axis
-        const y = d3.scaleLinear()
-            .domain([0, 150])
-            .range([ height, 0 ]);
-        svg.append("g")
-            .call(d3.axisLeft(y));
+            // Add Y axis
+            const y = d3.scaleLinear()
+                .domain([0, 150])
+                .range([height, 0]);
+            svg.append("g")
+                .call(d3.axisLeft(y));
 
-        svg.selectAll("mybar")
-        .data(electricData)
-        .enter()
-        .append("rect")
-        .attr("x", function(d) { return x(d.Make); })
-        .attr("y", function(d) { return y(d.AverageHighwayMPG); })
-        .attr("width", x.bandwidth())
-        .attr("height", function(d) { return height - y(d.AverageHighwayMPG); })
-        .attr("fill", "#69b3a2")
-        })
+            svg.selectAll("mybar")
+                .data(electricData)
+                .enter()
+                .append("rect")
+                .attr("x", function (d) { return x(d.Make); })
+                .attr("y", function (d) { return y(d.AverageHighwayMPG); })
+                .attr("width", x.bandwidth())
+                .attr("height", function (d) { return height - y(d.AverageHighwayMPG); })
+                .attr("fill", "#69b3a2")
+        }) 
 
     </script>
 
