--- a/scene1.html
+++ b/scene1.html
@@ -64,7 +64,22 @@
                 .attr("y", function (d) { return y(d.AverageHighwayMPG); })
                 .attr("width", x.bandwidth())
                 .attr("height", function (d) { return height - y(d.AverageHighwayMPG); })
-                .attr("fill", "#69b3a2")
+                .attr("fill", "steelblue")
+
+            svg.append("text")             
+                .attr("transform",
+                "translate(" + (width/2) + " ," + 
+                        (height + margin.top + 20) + ")")
+                .style("text-anchor", "middle")
+                .text("Car Make");
+                
+            svg.append("text")
+                .attr("transform", "rotate(-90)")
+                .attr("y", 0 - margin.left)
+                .attr("x",0 - (height / 2))
+                .attr("dy", "1em")
+                .style("text-anchor", "middle")
+                .text("Average Highway MPG"); 
         }) 
 
     </script>
