--- a/scene2.html
+++ b/scene2.html
@@ -77,7 +77,22 @@
                     .attr("y", function (d) { return y(d.value); })
                     .attr("width", x.bandwidth())
                     .attr("height", function (d) { return height - y(d.value); })
-                    .attr("fill", "orange")
+                    .attr("fill", "orange");
+
+                svg.append("text")             
+                    .attr("transform",
+                    "translate(" + (width/2) + " ," + 
+                           (height + margin.top + 20) + ")")
+                    .style("text-anchor", "middle")
+                    .text("Car Make");
+                
+                svg.append("text")
+                    .attr("transform", "rotate(-90)")
+                    .attr("y", 0 - margin.left)
+                    .attr("x",0 - (height / 2))
+                    .attr("dy", "1em")
+                    .style("text-anchor", "middle")
+                    .text("Average Highway MPG"); 
             })
     
         </script>
