--- a/scene1.html
+++ b/scene1.html
@@ -32,12 +32,23 @@
 
             //Get only electric car data in descending order
             var electricData = data.filter(function (d) { return d.Fuel === "Electricity" });
-            electricData.sort(function (a, b) { return d3.descending(a.AverageHighwayMPG, b.AverageHighwayMPG); });
-            console.log(electricData);
+
+            var electricGroupedData = d3.group(electricData, d => d.Make);
+            var meanElectricData = Array.from(ElectricGroupedData, ([key, values]) => {
+                var avgHighwayMPG = d3.mean(values, d => d.AverageHighwayMPG);
+                return {key, avgHighwayMPG};
+            });
+
+
+            var mappedData = meanElectricData.map(function(d) {
+            return {key: d.key, value: d.avgHighwayMPG};
+            });
+
+            mappedData.sort(function(a, b) { return d3.descending(a.value, b.value); });
 
             // Add X axis
             const x = d3.scaleBand()
-                .domain(electricData.map(function (d) { return d.Make }))
+                .domain(mappedData.map(function (d) { return d.key }))
                 .range([0, width])
                 .padding([0.2])
             svg.append("g")
@@ -60,10 +71,10 @@
                 .data(electricData)
                 .enter()
                 .append("rect")
-                .attr("x", function (d) { return x(d.Make); })
-                .attr("y", function (d) { return y(d.AverageHighwayMPG); })
+                .attr("x", function (d) { return x(d.key); })
+                .attr("y", function (d) { return y(d.value); })
                 .attr("width", x.bandwidth())
-                .attr("height", function (d) { return height - y(d.AverageHighwayMPG); })
+                .attr("height", function (d) { return height - y(d.value); })
                 .attr("fill", "steelblue")
 
             svg.append("text")             
