--- a/scene2.html
+++ b/scene2.html
@@ -29,10 +29,8 @@
             // Parse the Data
             d3.csv("https://flunky.github.io/cars2017.csv").then(function (data) {
     
-                //Get only electric car data in descending order
+                //Get only gasoline car data in descending order
                 var gasolineData = data.filter(function (d) { return d.Fuel === "Gasoline" });
-                gasolineData.sort(function (a, b) { return d3.descending(a.AverageHighwayMPG, b.AverageHighwayMPG); });
-                console.log(gasolineData);
 
                 var gasolineGroupedData = d3.group(gasolineData, d => d.Make);
                 var meanGasolineData = Array.from(gasolineGroupedData, ([key, values]) => {
