--- a/scene3.html
+++ b/scene3.html
@@ -30,7 +30,7 @@
 
         // List of subgroups = header of the csv files = soil condition here
         var subgroups = Object.keys(data[0]).slice(1)
-        console.log(subgroup);
+        console.log(subgroups);
 
         // List of groups = species here = value of the first column called group -> I show them on the X axis
         var groups = d3.map(data, function(d){return(d.group)}).keys()
