--- a/scene3.html
+++ b/scene3.html
@@ -119,7 +119,7 @@
             console.log(groups);
 
 
-            console.log(subgroups.map(function(key) { return {key: key, value: mappedData[key]}; }));
+            console.log(subgroups.map(function(key) { return {key: key, value: meanElectricData[key]}; }));
             
             // Add X axis
             const x = d3.scaleBand()
