--- a/scene1.html
+++ b/scene1.html
@@ -15,7 +15,6 @@
     <button onclick="window.location.href='index.html'">Previous</button>
     <button onclick="window.location.href='scene2.html'">Next</button>
     <script>
-
         // set the dimensions and margins of the graph
         const margin = { top: 10, right: 30, bottom: 110, left: 50 }, width = 650 - margin.left - margin.right, height = 400 - margin.top - margin.bottom;
 
@@ -27,34 +26,42 @@
             .append("g")
             .attr("transform", `translate(${margin.left},${margin.top})`);
 
+
+
         // Parse the Data
         d3.csv("https://flunky.github.io/cars2017.csv").then(function (data) {
 
+            // List of subgroups = header of the csv files = soil condition here
+            var subgroups = Object.keys(data[0]).slice(3)
+            console.log(subgroups);
+
             //Get only electric car data in descending order
             var electricData = data.filter(function (d) { return d.Fuel === "Electricity" });
-
             var electricGroupedData = d3.group(electricData, d => d.Make);
             var meanElectricData = Array.from(electricGroupedData, ([key, values]) => {
-                var avgHighwayMPG = d3.mean(values, d => d.AverageHighwayMPG);
-                return {key, avgHighwayMPG};
+                var AverageHighwayMPG = d3.mean(values, d => d.AverageHighwayMPG);
+                var AverageCityMPG = d3.mean(values, d => d.AverageCityMPG);
+                return { key, AverageHighwayMPG, AverageCityMPG };
             });
 
+            console.log(meanElectricData);
 
-            var mappedData = meanElectricData.map(function(d) {
-            return {key: d.key, value: d.avgHighwayMPG};
-            });
+            // List of groups = species here = value of the first column called group -> I show them on the X axis
+            var groups = d3.map(mappedData, function (d) { return (d.key) })
+            console.log(groups);
 
-            mappedData.sort(function(a, b) { return d3.descending(a.value, b.value); });
+
+            console.log(subgroups.map(function (key) { return { key: key, value: meanElectricData[key] }; }));
 
             // Add X axis
             const x = d3.scaleBand()
-                .domain(mappedData.map(function (d) { return d.key }))
+                .domain(groups)
                 .range([0, width])
                 .padding([0.2])
             svg.append("g")
                 .attr("transform", `translate(0, ${height})`)
                 .call(d3.axisBottom(x).tickSizeOuter(0))
-                .selectAll("text")  
+                .selectAll("text")
                 .style("text-anchor", "end")
                 .attr("dx", "-.8em")
                 .attr("dy", ".15em")
@@ -67,32 +74,47 @@
             svg.append("g")
                 .call(d3.axisLeft(y));
 
-            svg.selectAll("mybar")
-                .data(mappedData)
-                .enter()
-                .append("rect")
-                .attr("x", function (d) { return x(d.key); })
-                .attr("y", function (d) { return y(d.value); })
-                .attr("width", x.bandwidth())
-                .attr("height", function (d) { return height - y(d.value); })
-                .attr("fill", "steelblue")
+            // Another scale for subgroup position?
+            var xSubgroup = d3.scaleBand()
+                .domain(subgroups)
+                .range([0, x.bandwidth()])
+                .padding([0.05])
 
-            svg.append("text")             
+            // color palette = one color per subgroup
+            var color = d3.scaleOrdinal()
+                .domain(subgroups)
+                .range(['orange', 'steelblue'])
+
+            svg.append("g")
+                .selectAll("g")
+                .data(meanElectricData)
+                .enter()
+                .append("g")
+                .attr("transform", function (d) { return "translate(" + x(d.key) + ",0)"; })
+                .selectAll("rect")
+                .data(function (d) { return subgroups.map(function (key) { return { key: key, value: d[key] }; }); })
+                .enter().append("rect")
+                .attr("x", function (d) { return xSubgroup(d.key); })
+                .attr("y", function (d) { return y(d.value); })
+                .attr("width", xSubgroup.bandwidth())
+                .attr("height", function (d) { return height - y(d.value); })
+                .attr("fill", function (d) { return color(d.key); });
+
+            svg.append("text")
                 .attr("transform",
-                "translate(" + (width/2) + " ," + 
-                        (height + margin.top + 70) + ")")
+                    "translate(" + (width / 2) + " ," +
+                    (height + margin.top + 70) + ")")
                 .style("text-anchor", "middle")
-                .text("Car Make");
-                
+                .text("Electric Car Make");
+
             svg.append("text")
                 .attr("transform", "rotate(-90)")
                 .attr("y", 0 - margin.left)
-                .attr("x",0 - (height / 2))
+                .attr("x", 0 - (height / 2))
                 .attr("dy", "1em")
                 .style("text-anchor", "middle")
-                .text("Average Highway MPG"); 
-        }) 
-
+                .text("Average MPG");
+        });
     </script>
 
 </body>
