--- a/scene3.html
+++ b/scene3.html
@@ -47,7 +47,7 @@
             console.log(meanElectricData);           
 
             // List of groups = species here = value of the first column called group -> I show them on the X axis
-            var groups = d3.map(mappedData, function(d){return(d.key)})
+            var groups = d3.map(meanElectricData, function(d){return(d.key)})
             console.log(groups);
 
 
