Add interactive buttons

--- a/scene2.html
+++ b/scene2.html
@@ -105,7 +105,7 @@
                         "translate(" + (width / 2) + " ," +
                         (height + margin.top + 100) + ")")
                     .style("text-anchor", "middle")
-                    .text("Gasoline Car Make");
+                    .text("Gas Car Make");
 
                 svg.append("text")
                     .attr("transform", "rotate(-90)")
